--- a/style.css
+++ b/style.css
@@ -48,10 +48,19 @@ body {
     height: 125px;
     overflow: hidden;
     border-radius: 15px;
+    flex-shrink: 0;
 }
 
 #gameImage {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+#gameList {
+    display: flex;
+    flex-shrink: nowrap;
+    overflow-y: auto;
+    gap: 10px;
+    padding: 10px;
 }
